# LeProHQ

./: .gitignore  README.md
Benchmarks/: .gitignore  README.md
Benchmarks/2602.04455/: .gitignore  README.md  numbers-for-felix.txt  parse.py  run.py  tab2-mod.txt  tab2-ref.txt  tab3-ref.txt  tab4-ref.txt  tab5-ref.txt
Benchmarks/NPB392-229/: README.md  plots.py  run-FullyDiff.py  run-Inclusive.py  run.py
Benchmarks/NPB472-611/: test.py
Benchmarks/NPB540-345/: NPB540-345-Exclusive.py  NPB540-345-Inclusive.py  README.md  config.py  run-FullyDiff.py  run-Inclusive.py  runner.py
Benchmarks/PLB347-143/: .gitignore  README.md  f2py.sh  hqcoef.pyf  hqcoeff.patch  run.py
Benchmarks/PLB353-535/: run.py
Benchmarks/PLB452-109/: run.py
LeProHQ++/: .gitignore  README.md  meson.build  meson_options.txt
LeProHQ++/include/: DynamicScaleFactors.hpp  Flags.hpp  FullyDiffLeptoProduction.h  FullyInclusiveLeptoProduction.h  FullyInclusiveSoftResummedLeptoProduction.h  InclusiveLeptoProduction.h  PineAPPLpp.hpp  meson.build
LeProHQ++/include/Common/: AbstractFixedOrderLeptoProduction.h  AbstractIntKer.h  AbstractLeptoProduction.h  EnvUtils.h  IntegrationMeta.hpp  PythonGIL.hpp
LeProHQ++/include/FullyDiff/: IntKer.h  KinematicVars.hpp  PhasespaceValues.hpp  histT.hpp
LeProHQ++/include/FullyInclusive/: IntKer.h  PartonicVars.hpp
LeProHQ++/include/FullyInclusiveSoftResummed/: IntKer.h  Interpolation.h  MellinFuncs.h  MellinVars.hpp  ResExp.h
LeProHQ++/include/Inclusive/: IntKer.h
LeProHQ++/include/Pdf/: PdfWrapper.h
LeProHQ++/include/gslpp/: gslpp.Histogram.hpp  gslpp.Interpolation1D.hpp  gslpp.Interpolation2D.hpp  gslpp.Matrix.hpp
LeProHQ++/src/: FullyDiffLeptoProduction.cpp  FullyInclusiveLeptoProduction.cpp  FullyInclusiveSoftResummedLeptoProduction.cpp  InclusiveLeptoProduction.cpp  Python.cpp  main.cpp  meson.build  old_main.cpp
LeProHQ++/src/Common/: AbstractFixedOrderLeptoProduction.cpp  AbstractIntKer.cpp  AbstractLeptoProduction.cpp  AltarelliParisi.hpp  EnvUtils.cpp  Integration.hpp
LeProHQ++/src/Common/ME/: BQED.cpp  BQED.h
LeProHQ++/src/FullyDiff/: IntKer.cpp  PhasespacePoint.cpp
LeProHQ++/src/FullyDiff/ME/: A1.cpp  A1.h  A1Counter.cpp  A1Counter.h  A2.cpp  A2.h  A3.cpp  A3.h  R.cpp  R.h  RCounterX.cpp  RCounterX.h  RCounterXY.cpp  RCounterXY.h  RCounterY.cpp  RCounterY.h  ROK.h  RQED.h  SV.cpp  SV.h
LeProHQ++/src/FullyInclusive/: IntKer.cpp
LeProHQ++/src/FullyInclusive/coeffs/: cg0.cpp  cg0.h  cg0t.cpp  cg0t.h  cg1.cpp  cg1.h  cg1_a10.cpp  cg1_a10.h  cgBar1.cpp  cgBar1.h  cq1.cpp  cq1.h  cqBarF1.cpp  cqBarF1.h  dq1.cpp  dq1.h
LeProHQ++/src/FullyInclusiveSoftResummed/: IntKer.cpp  Interpolation.cpp  MellinFuncs.cpp  ResExp.cpp  cg0t.cpp  cg0t.h
LeProHQ++/src/Inclusive/: IntKer.cpp
LeProHQ++/src/Inclusive/ME/: IntA1.cpp  IntA1.h  IntA2.cpp  IntA2.h  IntA3.cpp  IntA3.h  IntR.h  SV.h
LeProHQ++/src/Pdf/: PdfWrapper.cpp
LeProHQ++/tests/: gsl.cpp  interpolation.cpp  me.cpp  meson.build  partonic.cpp
LeProHQpy/: .gitignore  .pylintrc  CHANGELOG.md  README.md  setup.py
LeProHQpy/extras/: plot_adler.py
LeProHQpy/performance/: .gitignore  README.md  integration.py  interpolation.py  limit.py  myscript.prof  pre-numba.prof  pre-str.prof
LeProHQpy/src/LeProHQ/: bmsn.py  cg1_.py  cq1_.py  utils.py
LeProHQpy/test/: test_adler.py  test_continuity.py
LeProHQutils/: README.md  make_bulk.py  plot_bulk_border.py  runner.py  threshold_coeff.py
Patches/: DSSV_gluon_update.patch  README.md  dvegas.cpp.patch  dvegas.h.patch  grsv.patch
